Update Karate and minor version